sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/obsidian-livesync/ingress-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: obsidian-livesync-couchdb
    app.kubernetes.io/name: obsidian-livesync-couchdb
  name: obsidian-livesync-couchdb
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: obsidian-couchdb.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
        - obsidian-couchdb.indigo.dalmura.cloud
      secretName: obsidian-couchdb-cert
  rules:
  - host: obsidian-couchdb.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obsidian-livesync-svc-couchdb
            port:
              number: 5984
